fixed typo and removed atom link

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@ layout: default
 <section id="intro">
     <div class="flex-row-between">
         <h1>Hi, 👋</h1>
-            <a href="https://www.linkedin.com/in/paul-boes/" title="LInkedIn" target="_blank" rel="noopener noreferrer"><i
+        <a href="https://www.linkedin.com/in/paul-boes/" title="LInkedIn" target="_blank" rel="noopener noreferrer"><i
                 class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/_paulboes_" title="Twitter" target="_blank" rel="noopener noreferrer"><i
-                    class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="https://scholar.google.co.uk/citations?hl=en&user=VeADakcAAAAJ" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i
-                        class="fa fa-graduation-cap" aria-hidden="true"></i></a>
-                        <a href="https://github.com/pboes" title="Github" target="_blank" rel="noopener noreferrer"><i
-                            class="fa fa-github" aria-hidden="true"></i></a>  
+        <a href="https://twitter.com/_paulboes_" title="Twitter" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://scholar.google.co.uk/citations?hl=en&user=VeADakcAAAAJ" title="Google Scholar" target="_blank"
+            rel="noopener noreferrer"><i class="fa fa-graduation-cap" aria-hidden="true"></i></a>
+        <a href="https://github.com/pboes" title="Github" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-github" aria-hidden="true"></i></a>
         <button title="Change theme" id="theme-toggle" onclick="modeSwitcher()">
             <div></div>
         </button>
     </div>
     <div class="bio">
         <p>
-            my name is Paul and I am a data scientist and operations researcher with an academic background in phyics (especially quantum information theory), 
-            economics and philosophy of science. On this blog I write about various things that I find interesting, which includes things like the historical and social aspects of science, quantum technology, 
-            clear explanations of concepts involving statistics, things that people call "crypto", economics. Some time ago I also had strong feelings about Kant and epistemology of science, but since 
-            I could never actually articulate them, I've given up on that... 
+            my name is Paul and I am a data scientist and operations researcher with an academic background in physics
+            (especially quantum information theory),
+            economics and philosophy of science. On this blog I write about various things that I find interesting,
+            which includes things like the historical and social aspects of science, quantum technology,
+            clear explanations of concepts involving statistics, things that people call "crypto", economics. Some time
+            ago I also had strong feelings about Kant and epistemology of science, but since
+            I could never actually articulate them, I've given up on that...
         </p>
     </div>
 
@@ -77,19 +80,24 @@ layout: default
             <a href="{{ site.baseurl }}/assets/pdfs/bachelor_final_color.pdf">On the cost of being uncertain</a>
         </li>
         <li>
-            <a href="{{ site.baseurl }}/assets/pdfs/north_hist.pdf">Coasian reasoning and mental models in D. C. North’s theory of institutional economics</a>
+            <a href="{{ site.baseurl }}/assets/pdfs/north_hist.pdf">Coasian reasoning and mental models in D. C. North’s
+                theory of institutional economics</a>
         </li>
         <li>
-            <a href="{{ site.baseurl }}/assets/pdfs/pboes-info.pdf">On providing reconstructions of Quantum Mechanics using information theoretic concepts</a>
+            <a href="{{ site.baseurl }}/assets/pdfs/pboes-info.pdf">On providing reconstructions of Quantum Mechanics
+                using information theoretic concepts</a>
         </li>
         <li>
-            <a href="{{ site.baseurl }}/assets/pdfs/pboes-structural-realism1.pdf">Individuation in moderate structural realism about spacetime</a>
+            <a href="{{ site.baseurl }}/assets/pdfs/pboes-structural-realism1.pdf">Individuation in moderate structural
+                realism about spacetime</a>
         </li>
         <li>
-            <a href="{{ site.baseurl }}/assets/pdfs/pooley_kant.pdf">The implications of Kant's Dialectic for the question of the world's temporal extension</a>
+            <a href="{{ site.baseurl }}/assets/pdfs/pooley_kant.pdf">The implications of Kant's Dialectic for the
+                question of the world's temporal extension</a>
         </li>
         <li>
-            <a href="{{ site.baseurl }}/assets/pdfs/conditions_Einstein.pdf">Conditions for the Ontic Treatment of Mathematics</a>
+            <a href="{{ site.baseurl }}/assets/pdfs/conditions_Einstein.pdf">Conditions for the Ontic Treatment of
+                Mathematics</a>
         </li>
         <li>
             <a href="{{ site.baseurl }}/assets/pdfs/sounds-from-noise.pdf">Sounds from Noise</a>
